--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
     <link rel="stylesheet" href="./bower_components/angular-material/angular-material.css">
     <link rel="stylesheet" href="./bower_components/isteven-angular-multiselect/isteven-multi-select.css">
-    <link rel="stylesheet" href="./dist/opendesk-app.min.css">
+    <link rel="stylesheet" href="./dist/opendesk-app-129.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
     <link rel="shortcut icon" type="image/x-icon" href="./favicon.ico?v2">
@@ -55,7 +55,7 @@
     <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
 
     <!-- OpenDesk App -->
-    <script src="./dist/opendesk-app.js"></script>
+    <script src="./dist/opendesk-app-129.js"></script>
 
 </head>
 
