--- a/app/src/flowchart/flowchart.html
+++ b/app/src/flowchart/flowchart.html
@@ -1,4 +1,4 @@
-<style>
+
 <style>
     .anchor {
         display: block;
@@ -109,6 +109,17 @@
     input {
         display: none;
     }
+
+    #flowSearch input {
+        display: block;
+    }
+
+    #vmtest input {
+        display: block;
+    }
+
+
+
     input[type=checkbox]:checked + label {
         color: #0f0;
     }
@@ -187,3 +198,5 @@
         </div>
     </div>
 </md-card>
+
+
