--- a/app/src/authorityMail/authorityMail.view.html
+++ b/app/src/authorityMail/authorityMail.view.html
@@ -35,6 +35,7 @@
 
 
             <md-checkbox ng-model="vm.payload.defaultbody">standardtekst</md-checkbox>
+            <md-checkbox ng-model="vm.payload.useSignature">Anvend indskannet signatur</md-checkbox>
         <md-input-container class="md-block">
           <label>Besked</label>
 
