--- a/app/src/system_settings/reports/reports.html
+++ b/app/src/system_settings/reports/reports.html
@@ -35,7 +35,8 @@
             </md-input-container>
         </div>
 
-        <md-button ng-disabled="vm.disableVentetiderButton" ng-click="vm.ventetidsrapport()" >Klik for at lave en ventetidsrapport</md-button>
+<!--        <md-button ng-disabled="vm.disableVentetiderButton" ng-click="vm.ventetidsrapport()" >Klik for at lave en ventetidsrapport</md-button>-->
+        <md-button  ng-click="vm.ventetidsrapport()" >Klik for at lave en ventetidsrapport</md-button>
 
     </md-card-content>
 
