--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -330,13 +330,25 @@
 
     <md-card ng-show="showResults">
         <md-card-title>
-            <md-button class="md-raised" ng-click="vm.toggleResults(); vm.clearResults()">Ret søgning</md-button>
+            <div> <md-button class="md-raised div1" ng-click="vm.toggleResults(); vm.clearResults()">Ret søgning</md-button></div>
             <span flex></span>
-            <div layout="row" layout-align="center center">
+
+            <div class="div1" layout="row" layout-align="center center">
                 <div>Antal: <span class="md-body-2">{{vm.totalResults}}</span></div>
+
+
+                <div ng-show="vm.showAverage" class="div1">  {{vm.averageText}} : {{ vm.average}}</div>
             </div>
+
+
+
         </md-card-title>
+
+
+
+
         <md-card-content>
+
             <md-progress-linear md-mode="indeterminate" ng-show="vm.isLoading"></md-progress-linear>
             <md-table-container>
                 <table md-table>
