--- a/index.html
+++ b/index.html
@@ -47,12 +47,13 @@
     <script src="./bower_components/angular-fixed-table-header/src/fixed-table-header.min.js"></script>
     <script src="./bower_components/angular-i18n/angular-locale_da-dk.js"></script>
     <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="./bower_components/ui-cropper/compile/unminified/ui-cropper.js"></script>
 
     <script src="./bower_components/ng-file-upload/ng-file-upload.min.js"></script>
 
     <!-- angular tables -->
     <link href="bower_components/angular-material-data-table/dist/md-data-table.min.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
+        <script type="text/javascript" src="bower_components/angular-material-data-table/dist/md-data-table.min.js"></script>
 
     <!-- OpenDesk App -->
     <script src="./dist/opendesk-app-129.js"></script>
