--- a/app/src/flowchart/flowchart_navigation.html
+++ b/app/src/flowchart/flowchart_navigation.html
@@ -38,6 +38,10 @@
                 {{'COMMON.VENTEDEGR' | translate }} <span class="flowchart-count">({{ vm.total.ventendegr }})</span>
             </md-button>
 
+            <md-button class="md-raised {{vm.currentCard == 'supopl' ?'md-primary':'default'}}" ng-click="vm.minesager=false;vm.loaddata('supopl', '@rm:creationDate', 'true')">
+                {{'COMMON.SUPOPL' | translate }} <span class="flowchart-count">({{ vm.total.supopl }})</span>
+            </md-button>
+
             <md-button class="md-raised {{vm.currentCard == 'user' ?'md-primary':'default'}}" ng-show="vm.showUser" ng-click="vm.minesager=true;vm.loaddata('user', '@rm:creationDate', 'true')">
                 {{'COMMON.MINESAGER' | translate }} <span class="flowchart-count">({{ vm.total.user }})</span>
             </md-button>
