--- a/app/src/system_settings/reports/reports.html
+++ b/app/src/system_settings/reports/reports.html
@@ -36,7 +36,7 @@
         </div>
 
 <!--        <md-button ng-disabled="vm.disableVentetiderButton" ng-click="vm.ventetidsrapport()" >Klik for at lave en ventetidsrapport</md-button>-->
-        <md-button  ng-click="vm.ventetidsrapport()" >Klik for at lave en ventetidsrapport</md-button>
+        <md-button  ng-disabled="vm.reportStarted" ng-click="vm.ventetidsrapport()" >Klik for at lave en ventetidsrapport</md-button>
 
 <!--        <md-button  ng-click="vm.testMail()" >Klik for at sende en testmail med en rapport over aktive ventetider de sidste 14 dage</md-button>-->
 
