ready for oda-test.rm.dk

--- a/app/src/flowchart/flowchart_navigation.html
+++ b/app/src/flowchart/flowchart_navigation.html
@@ -38,6 +38,10 @@
                 {{'COMMON.VENTEDEGR' | translate }} <span class="flowchart-count">({{ vm.total.ventendegr }})</span>
             </md-button>
 
+            <md-button class="md-raised {{vm.currentCard == 'igangvaerendegr' ?'md-primary':'default'}}" ng-click="vm.minesager=false;vm.loaddata('igangvaerendegr', '@rm:creationDate', 'true')">
+                {{'COMMON.IGANGGR' | translate }} <span class="flowchart-count">({{ vm.total.igangvaerendegr }})</span>
+            </md-button>
+
             <md-button class="md-raised {{vm.currentCard == 'supopl' ?'md-primary':'default'}}" ng-click="vm.minesager=false;vm.loaddata('supopl', '@rm:creationDate', 'true')">
                 {{'COMMON.SUPOPL' | translate }} <span class="flowchart-count">({{ vm.total.supopl }})</span>
             </md-button>
