--- a/app/src/declaration/advancedSearch/advancedSearch.view.html
+++ b/app/src/declaration/advancedSearch/advancedSearch.view.html
@@ -324,18 +324,7 @@
                 </div>
 
             </div>
-
-            <div layout="column" flex="75">
-            <md-card flex>
-                <md-card-content>
-                <div layout="row">
-                    <md-checkbox ng-model="searchParams.print" ">Printvenlig</md-checkbox>
-                </div>
-                </md-card-content>
-            </md-card>
-            </div>
-
-            <md-button ng-click="vm.advancedSearch(0, 25, searchParams); vm.toggleResults()" class="md-raised md-primary">Søg</md-button>
+            <md-button ng-click="vm.advancedSearch(0, 25, searchParams, false); vm.toggleResults()" class="md-raised md-primary">Søg</md-button>
         </div>
     </div>
 
@@ -391,4 +380,11 @@
                 <md-button class="md-raised md-primary" flex ng-click="vm.nextPage()">Vis flere</md-button>
             </div>
         </md-card-content>
+
+
+
+<!--                        <md-checkbox ng-model="searchParams.print" ">Printvenlig</md-checkbox>-->
+                        <md-button ng-disabled="vm.printFriendlytStarted" class="md-raised md-primary" flex ng-click="vm.printFriendly()">Printvenlig</md-button>
+
+
     </md-card>
