--- a/app/src/flowchart/flowchart_headings.html
+++ b/app/src/flowchart/flowchart_headings.html
@@ -48,9 +48,13 @@
                 <div flex="5">
                 </div>
 
-                <div flex="15">
-                    <CENTER>{{'FLOWCHART.VISITATION' | translate}}</CENTER>
-                </div>
+
+                    <div flex="15">
+                        <span ng-hide="vm.isBua">
+                        <CENTER>{{'FLOWCHART.VISITATION' | translate}}</CENTER>
+                            </span>
+                    </div>
+
 
                 <div class="card-content__actions"></div>
 
@@ -58,3 +62,5 @@
         </div>
     </md-card>
 </div>
+
+
