--- a/app/src/authorityMail/authorityMail.view.html
+++ b/app/src/authorityMail/authorityMail.view.html
@@ -42,6 +42,7 @@
                 <!--            <md-checkbox ng-model="vm.payload.defaultbody">standardtekst</md-checkbox>-->
             </md-input-container>
 
+<!--            <md-checkbox ng-model="vm.payload.removeSignatureFromEmail">Fjern afsender signatur</md-checkbox>-->
 
             <md-checkbox ng-show="vm.showSignitureCheckBox" ng-model="vm.payload.useSignature">Anvend indskannet signatur</md-checkbox>
 
